Fix centering in several pages broken in 5c09674a53ee0a8d48f46fad33020017df8bde

--- a/src/components/MainSection/MainSection.styl
+++ b/src/components/MainSection/MainSection.styl
@@ -17,4 +17,6 @@
 
 .MainSection {
     min-height: calc(100vh - var(--below-navbar) -1px)
+    display: flex;
+    flex-direction: column;
 }
